--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -1,3 +1,13 @@
+@font-face {
+    font-family: Aphro;
+    src: url('../assets/fonts/AphroditeSlimPro.otf');
+}
+
+@font-face {
+    font-family: Akkurat;
+    src: url('../assets/fonts/Akkurat-Mono.OTF');
+}
+
 .navbar {
     display: flex;
     justify-content: space-between;
@@ -7,9 +17,13 @@
 
 .logo {
     color: #fff;
-    font-size: 2rem;
+    font-size: 1.5rem;
+    font-family: 'Aphro', sans-serif;
+    cursor: pointer;
 }
 
 .playground-btn {
     color: #BCCCDC;
+    cursor: pointer;
+    font-family: 'Akkurat', sans-serif;
 }
