--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -8,7 +8,8 @@
 }
 
 .first {
-    color: #fff;
+    /* color: #fff; */
+    color: #000;    
     opacity: 0.5;
     /* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
     font-style: italic;
