--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -16,14 +16,15 @@
 }
 
 .logo {
-    color: #fff;
+    color: #000;
     font-size: 1.5rem;
     font-family: 'Aphro', sans-serif;
     cursor: pointer;
 }
 
 .playground-btn {
-    color: #BCCCDC;
+    /* color: #BCCCDC; */
+    color: #102A43;
     cursor: pointer;
     font-family: 'Akkurat', sans-serif;
 }
