--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -4,7 +4,17 @@
     align-items: center;
     justify-content: center;
     height: 10rem;
-    width: 10rem;
+    width: 12rem;
     background-color: #fff;
     border-radius: 5px;
+    gap: 1rem;
+}
+
+.img {
+    font-size: 2rem;
+}
+
+.heading {
+    font-size: 0.9rem;
+    color: #486581;
 }
