--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,8 +5,8 @@
 }
 
 body {
-  /* background-color: #121212; */
-  background-color: #f8f8f7;
+  background-color: #212121;
+  /* background-color: #f8f8f7; */
 }
 
 .container {
