--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -9,7 +9,7 @@
 
 .first {
     /* color: #fff; */
-    color: #000;    
+    color: #fff;    
     opacity: 0.5;
     /* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
     font-style: italic;
@@ -22,5 +22,6 @@
 
 .second {
     font-size: 1.2rem;
-    color: #486581;
+    /* color: #486581; */
+    color: #bcccdc;
 }
