--- a/src/styles/prism.css
+++ b/src/styles/prism.css
@@ -1,11 +1,11 @@
 code[class*=language-],
 pre[class*=language-] {
-    color: #000;
+    color: #fff;
     background: 0 0;
-    text-shadow: 0 1px #fff;
     font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
     font-size: 1em;
     text-align: left;
+    text-shadow: 0 -.1em .2em #000;
     white-space: pre;
     word-spacing: normal;
     word-break: normal;
@@ -20,12 +20,34 @@ pre[class*=language-] {
     hyphens: none
 }
 
+:not(pre)>code[class*=language-],
+pre[class*=language-] {
+    background: #141414
+}
+
+pre[class*=language-] {
+    border-radius: .5em;
+    border: .3em solid #545454;
+    box-shadow: 1px 1px .5em #000 inset;
+    margin: .5em 0;
+    overflow: auto;
+    padding: 1em
+}
+
+pre[class*=language-]::-moz-selection {
+    background: #27292a
+}
+
+pre[class*=language-]::selection {
+    background: #27292a
+}
+
 code[class*=language-] ::-moz-selection,
 code[class*=language-]::-moz-selection,
 pre[class*=language-] ::-moz-selection,
 pre[class*=language-]::-moz-selection {
     text-shadow: none;
-    background: #b3d4fc
+    background: hsla(0, 0%, 93%, .15)
 }
 
 code[class*=language-] ::selection,
@@ -33,142 +55,81 @@ code[class*=language-]::selection,
 pre[class*=language-] ::selection,
 pre[class*=language-]::selection {
     text-shadow: none;
-    background: #b3d4fc
-}
-
-@media print {
-
-    code[class*=language-],
-    pre[class*=language-] {
-        text-shadow: none
-    }
-}
-
-pre[class*=language-] {
-    padding: 1em;
-    margin: .5em 0;
-    overflow: auto
-}
-
-:not(pre)>code[class*=language-],
-pre[class*=language-] {
-    background: #f5f2f0
+    background: hsla(0, 0%, 93%, .15)
 }
 
 :not(pre)>code[class*=language-] {
-    padding: .1em;
     border-radius: .3em;
+    border: .13em solid #545454;
+    box-shadow: 1px 1px .3em -.1em #000 inset;
+    padding: .15em .2em .05em;
     white-space: normal
 }
 
-.token.cdata,
-.token.comment,
-.token.doctype,
-.token.prolog {
-    color: #708090
+.token.comment{
+    color: #777
 }
 
 .token.punctuation {
-    color: #999
-}
-
-.token.namespace {
     opacity: .7
 }
 
 .token.boolean,
-.token.constant,
-.token.deleted,
-.token.number,
-.token.property,
-.token.symbol,
-.token.tag {
-    color: #905
+.token.number {
+    color: #ce6849
 }
 
-.token.attr-name,
-.token.builtin,
-.token.char,
-.token.inserted,
-.token.selector,
-.token.string {
-    color: #690
+.token.keyword{
+    color: #f9ed99
 }
 
-.language-css .token.string,
-.style .token.string,
-.token.entity,
-.token.operator,
-.token.url {
-    color: #9a6e3a;
-    background: hsla(0, 0%, 100%, .5)
+.token.identifier {
+    color: #6b8e23;
 }
 
-.token.atrule,
-.token.attr-value,
-.token.keyword {
-    color: #07a
+.token.equality-operator, 
+.token.assignment-operator {
+    color: #f89614;
 }
 
-.token.class-name,
-.token.function {
-    color: #dd4a68
+.token.logical-operator {
+    color: #dcdcaa;
+}
+
+.token.relational-operator {
+    color: #ff73fd;
+}
+
+.token.additive-operator,
+.token.multiplicative-operator {
+    color: #82b1ff;
+}
+
+.token.string{
+    color: #909e6a
 }
 
 .token.important,
-.token.regex,
-.token.variable {
-    color: #e90
+.token.regex {
+    color: #e8c062
 }
 
-.token.bold,
-.token.important {
-    font-weight: 700
-}
-
-.token.italic {
-    font-style: italic
-}
-
-.token.entity {
-    cursor: help
-}
-
-pre[class*=language-].line-numbers {
+.token {
     position: relative;
-    padding-left: 3.8em;
-    counter-reset: linenumber
+    z-index: 1
 }
 
-pre[class*=language-].line-numbers>code {
-    position: relative;
-    white-space: inherit
+.line-highlight.line-highlight {
+    background: hsla(0, 0%, 33%, .25);
+    background: linear-gradient(to right, hsla(0, 0%, 33%, .1) 70%, hsla(0, 0%, 33%, 0));
+    border-bottom: 1px dashed #545454;
+    border-top: 1px dashed #545454;
+    margin-top: .75em;
+    z-index: 0
 }
 
-.line-numbers .line-numbers-rows {
-    position: absolute;
-    pointer-events: none;
-    top: 0;
-    font-size: 100%;
-    left: -3.8em;
-    width: 3em;
-    letter-spacing: -1px;
-    border-right: 1px solid #999;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none
-}
-
-.line-numbers-rows>span {
-    display: block;
-    counter-increment: linenumber
-}
-
-.line-numbers-rows>span:before {
-    content: counter(linenumber);
-    color: #999;
-    display: block;
-    padding-right: .8em;
-    text-align: right
+.line-highlight.line-highlight:before,
+.line-highlight.line-highlight[data-end]:after {
+    background-color: #8693a6;
+    color: #f4f1ef
 }
