--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -5,16 +5,18 @@
     justify-content: center;
     height: 10rem;
     width: 12rem;
-    background-color: #fff;
+    /* background-color: #fff; */
+    background-color: #282c34;
     border-radius: 5px;
     gap: 1rem;
 }
 
 .img {
     font-size: 2rem;
+    color: rgb(255, 255, 255, 0.5);
 }
 
 .heading {
     font-size: 0.9rem;
-    color: #486581;
+    color: #bcccdc;
 }
