--- a/src/styles/Label.css
+++ b/src/styles/Label.css
@@ -1,6 +1,6 @@
 .label {
     display: flex;
-    padding: 1rem;
+    padding: 1rem 5rem;
     /* color: #fff; */
     /* color: #000; */
     align-items: center;
