--- a/src/styles/Playground.css
+++ b/src/styles/Playground.css
@@ -1,30 +1,31 @@
 .playground {
     display: flex;
+    /* justify-content: center;
+    align-items: center; */
     padding: 1rem 5rem;
-    min-height: 15rem;
-    /* height: 15rem; */
+    /* min-height: 15rem; */
+    height: 30rem;
 }
-
-/* 
-textarea {
-    display: flex;
-    flex-grow: 1;
-    border-radius: 5px;
-    resize: none;
-    border: none;
-    padding: 1rem;
-} */
 
 .editor {
-    counter-reset: line;
-    border: none;
+    display: flex;
     flex-grow: 1;
-    background-color: #282c34;
-    background: linear-gradient(90deg, #20232a 0%, #282c34 51%, #20232a 100%);
-    color: white;
 }
 
-.editor #codeArea {
+/* .editor {
+    /* counter-reset: line; */
+    /* border: none; */
+    /* display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1; */
+    /* background-color: #282c34;
+    background: linear-gradient(90deg, #20232a 0%, #282c34 51%, #20232a 100%); */
+    /* color: white; */
+    /* height: 20rem; */
+} */
+
+/* .editor #codeArea {
     outline: none;
     padding-left: 60px !important;
 }
@@ -40,4 +41,4 @@ textarea {
     text-align: right;
     width: 40px;
     font-weight: 100;
-}
+} */
